1.3.1: 2022 Aug 29

* added example_style_transfer_arbitrary and example_yolo_v4 (Jonathhhan)

1.3.0: 2022 Feb 22

* added support for frozen graphs (TF < 1.15 model format)
* added basic frozen graph example
* added updated version of ofxMSATensorFlow example_char_rnn

* fixed ofxTF2::Model::runMultiModel() more less inputs than initially named

* update to latest cppflow with frozen graph support (Paul Bethge)
* improved example model download script to accept list of zip filenames
* added example model download script -l/--list flag to print known model zip
  filenames

1.2.1: 2022 Feb 16

* fixed incorrect changelog version

* added details on the usage of movenet and video matting models

1.2.0: 2022 Feb 08

* fixed shape and location SavedModel after training in example_style_transfer

* added non-offical macOS arm64 libtensorflow build download
* added example_movenet and example_video_matting (Natxopedreira)
* added version as download_tensorflow script first argument
* added details about movenet model input batch size and recommended dimensions

* updated to libtensorflow 2.7.0

1.1.1: 2021 May 18

* fixed example model download script breaking on certain shells

* added GIFs for each demo to the readme

* restrict max GPU memory usage in demos

1.1.0: 2021 May 06

* added threaded model background loading via loadAsync() function
* added ofxTF2::setMaxGPUMemory()
* added ofxTF2::setContext()

* fixed ofxTF2::getTensorShape()

* updated cppflow as cppflow2 is now the main branch, make sure to update the
  local submodule with:
      git submodule deinit libs/cppflow/
      git submodule update --init --recursive
* updated README.md information on training with Python and TF2
* updated download scripts

1.0.1: 2021 Feb 19

* fixed bad cast in ofxTF2::vectorToTensor()
* fixed issue with setenv() declaration and sys/error.h include on Windows
* fixed libtensorflow download script not handling Windows build zip files

* added changelog
