@@ -1,3 +1,8 @@
+#.#.#: 2022 TBD
+
+* added configure_makefile.sh and configure_xcode.sh scripts to automate project
+  configuration before/after running the oF Project Generator
+
 1.3.1: 2022 Aug 29
 
 * added example_style_transfer_arbitrary and example_yolo_v4 (Jonathhhan)
